--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3258,14 +3258,15 @@ footer {
   position: absolute;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  margin-top: 150px;
+  padding-bottom: 50px;
 }
 
 .popup-list-of-days-get-money-generation-connected-opacity .align .card {
   background-color: white;
   padding: 20px 30px;
   border-radius: 5px;
-  margin-top: 150px;
-  margin-bottom: 50px;
+  
 }
 
 .popup-list-of-days-get-money-generation-connected-opacity .align .card .last-day p {
